--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 <body>
 
   <div class="main">
-    <h1><font color="white">GSMP1111</font></h1>
+    <h1><font color="white">KTL APP</font></h1>
     <div class="content">
       {{{body}}}
     </div>
