--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,11 +4,11 @@
 <div id="info">
   <table>
     <tr>
-      <th>pod1:</th>
+      <th>pod:</th>
       <td>{{ hostName }}</td>
     </tr>
     <tr>
-      <th>node1:</th>
+      <th>node:</th>
       <td>{{ platform }} ({{ release }})</td>
     </tr>
   </table>
